force-app/main/default/objects/Registration__c/fields/LK_Customer__c.field-meta.xml
<CustomField>
    <fullName>LK_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Registration</relationshipLabel>
    <relationshipName>Registration</relationshipName>
    <type>Lookup</type>
</CustomField>