force-app/main/default/objects/Registration__c/fields/LK_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>LK_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Vehicle__c.LK_Vehicle_Owner__c</field>
            <operation>equals</operation>
            <valueField>$Source.LK_Customer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Registration</relationshipLabel>
    <relationshipName>Registration</relationshipName>
    <type>Lookup</type>
</CustomField>