force-app/main/default/objects/Registration__c/fields/NU_km__c.field-meta.xml
<CustomField>
    <fullName>NU_km__c</fullName>
    <label>Number of km</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>