force-app/main/default/objects/Registration__c/fields/TX_Indications__c.field-meta.xml
<CustomField>
    <fullName>TX_Indications__c</fullName>
    <label>Indications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>