force-app/main/default/objects/Registration__c/fields/TX_Reasons__c.field-meta.xml
<CustomField>
    <fullName>TX_Reasons__c</fullName>
    <label>Reasons</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>